# fiap-data-engineer-rm363532

entrega-data-engineer-program/: MANIFEST.in  README.md  consolidate_and_move.sh  main.py  pyproject.toml
entrega-data-engineer-program/data/output/relatorio_pedidos/: part-00000-5cbc0ba9-3031-4ed4-af4c-97730411b286-c000.snappy.parquet
entrega-data-engineer-program/pedidos_recusados_legitimos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
entrega-data-engineer-program/src/business/: pedidos_processor.py
entrega-data-engineer-program/src/config/: app_config.py
entrega-data-engineer-program/src/io/: data_handler.py
entrega-data-engineer-program/src/orchestration/: pipeline_orchestrator.py
entrega-data-engineer-program/src/session/: spark_session_manager.py
entrega-data-engineer-program/tests/: test_pedidos_processor.py
